HW1/javali_tests/HW1/HW1_team/test6.javali
class Main {
	void main() {
		int r1, r2, r3;
		
		r1=read();
		write(5+r1);
		r1=r1/(5+r1);
		
		r2=read();
		r2=r2/(r1+5);
		
		r3=5;
		r3=read();
		r3=r1;
	}
}
		